5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1839_2221.log
== TEST (2019-06-26 12:57:35) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
print(menos)
for i in range(len(v)):
	if(v[i] == maior):
		#print(i+1)
-- ERROR:
File "XXXX", line 13
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:57:43) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
print(menos)
#for i in range(len(v)):
	#if(v[i] == maior):
		#print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:59:19) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
print(menos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:59:58) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:00:18) 
-- CODE:
from numpy import *
M = array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:00:55) 
-- CODE:
from numpy import *
M = array(eval(input(":")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:01:24) 
-- CODE:
from numpy import *
from numpy.linalg import*
M = array(eval(input(":")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
menos = v.min()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:12:46) 
-- CODE:
from numpy import *

m = array(eval(input(":")))
h=0
c=0
for i in range(shape(m)[0]):
	h+=(min(m[i,:]))
	c+=1
print(round((h/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:13:00) 
-- CODE:
from numpy import *

m = array(eval(input(":")))
h=0
c=0
for i in range(shape(m)[0]):
	h+=(min(m[i,:]))
	c+=1
print(round((h/c),2))
-- EXECUTION TIME:
1.22275
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
